[package]
name = "firehose-extract"
version = "0.1.0"
description = "Stream Firehose-formatted data from the fuel-core GraphQL API"
authors = ["Fuel Labs <contact@fuel.sh>"]
categories = ["cryptography::cryptocurrencies"]
edition = "2021"
homepage = "https://fuel.network/"
keywords = ["blockchain", "cryptocurrencies", "fuel", "firehose"]
repository = "https://github.com/FuelLabs/fuel-core"

[dependencies]
anyhow = "1.0"
cynic = "2"
fuel-core-client = {git = "https://github.com/FuelLabs/fuel-core", branch = "backport/graphql-clone-derives"} # "0.22"
fuel-core-types = {git = "https://github.com/FuelLabs/fuel-core", branch = "backport/graphql-clone-derives"} # "0.22"
clap = { version = "4.0", features = ["derive"] }
hex = "0.4"
humantime = "2.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.12"
strum = "0.24"

[build-dependencies]
prost-build = { version = "0.12" }
fuel-core-client = {git = "https://github.com/FuelLabs/fuel-core", branch = "backport/graphql-clone-derives"} # "0.22"
