[package]
name = "substreams-fuel"
version = "1.0.0"
edition = "2021"

[lib]
name = "substreams"
crate-type = ["cdylib"]

[dependencies]
substreams = "0.5"
substreams-ethereum = "0.9"
substreams-entity-change = "1.3"
prost = "0.11.3"
fuels-core = "0.56.0"
hex = "0.4.3"
base64 = "0.13.0"
fuel-abi-types = "0.4.0"
serde_json = "1.0.108"

[profile.release]
lto = true
opt-level = 's'
strip = "debuginfo"
